--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
-Flask==2.1.2
-pandas==1.5.3
-joblib==1.2.0
-gunicorn==20.1.0
-werkzeug==2.0.3
-numpy==1.21.6
+Flask
+gunicorn
+joblib
+pandas
+numpy
+requests
+flask-cors
